Fix spacing above footer for all compat themes

--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -302,7 +302,6 @@ a.sensei-certificate-link {
 .quiz {
 	form {
 		#sensei-quiz-list {
-			margin: 0 0 1.618em 0;
 			list-style-position: inside;
 			list-style-type: none;
 			padding-inline-start: 0;
