--- a/assets/css/sensei-course-theme/quiz-compat.scss
+++ b/assets/css/sensei-course-theme/quiz-compat.scss
@@ -65,6 +65,10 @@ $textColor: #1E1E1E;
 	}
 }
 
+#sensei-quiz-list {
+	margin: 0 0 3.75rem 0
+}
+
 .quiz {
 	form {
 		#sensei-quiz-list {
